# PlayerMannequin

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg-configuration.json  vcpkg.json
cmake/: Plugin.h.in  XSEPlugin.cmake
cmake/ports/commonlibsse-ng/: portfile.cmake  vcpkg.json
include/: Events.h  Mannequin.h  MannequinInterface.h  PCH.h  SKEE.h
src/: Events.cpp  Mannequin.cpp  Mannequin.h  MannequinInterface.cpp  SKEE.cpp  SKEEInterface.cpp  XSEPlugin.cpp
